--- a/quadcopter_research/quadcopter_research/quadcopter_research.csproj
+++ b/quadcopter_research/quadcopter_research/quadcopter_research.csproj
@@ -48,16 +48,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ANFIS.cs" />
+    <Compile Include="Conclusion.cs" />
+    <Compile Include="Dataset.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Function.cs" />
+    <Compile Include="MembershipFunction.cs" />
+    <Compile Include="Pair.cs" />
     <Compile Include="PID.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="quadcopter_model.cs" />
+    <Compile Include="Rule.cs" />
+    <Compile Include="TNorm.cs" />
     <Compile Include="ZieglerNichols.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
