--- a/quadcopter_research/quadcopter_research/quadcopter_research.csproj
+++ b/quadcopter_research/quadcopter_research/quadcopter_research.csproj
@@ -46,6 +46,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WeifenLuo.WinFormsUI.Docking, Version=2.4.0.16114, Culture=neutral, PublicKeyToken=8409e063f3716060, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ANFIS.cs" />
@@ -57,6 +61,18 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="form_main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="form_main.Designer.cs">
+      <DependentUpon>form_main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_Renderer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Renderer.Designer.cs">
+      <DependentUpon>Form_Renderer.cs</DependentUpon>
     </Compile>
     <Compile Include="Function.cs" />
     <Compile Include="MembershipFunction.cs" />
@@ -70,6 +86,12 @@
     <Compile Include="ZieglerNichols.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="form_main.resx">
+      <DependentUpon>form_main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_Renderer.resx">
+      <DependentUpon>Form_Renderer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
