--- a/quadcopter_research/quadcopter_research/quadcopter_research.csproj
+++ b/quadcopter_research/quadcopter_research/quadcopter_research.csproj
@@ -62,18 +62,6 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="form_main.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="form_main.Designer.cs">
-      <DependentUpon>form_main.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Form_Renderer.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form_Renderer.Designer.cs">
-      <DependentUpon>Form_Renderer.cs</DependentUpon>
-    </Compile>
     <Compile Include="Function.cs" />
     <Compile Include="MembershipFunction.cs" />
     <Compile Include="Pair.cs" />
@@ -86,12 +74,6 @@
     <Compile Include="ZieglerNichols.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="form_main.resx">
-      <DependentUpon>form_main.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form_Renderer.resx">
-      <DependentUpon>Form_Renderer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -120,6 +102,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Core\Unity\Interop.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Core\Unity\Resources\test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Core\Unity\test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Core\Unity\_RENDERER.html">
